<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iRuben</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_word">Add Word Activity</string>
    <string name="activity_add_word">Add Word Activity</string>
    <string name="action_add_word">Add Word</string>
    <string name="source_language">Source Language</string>
    <string name="source_content">Type something</string>
    <string name="destination_language">Destination Language</string>
    <string name="destination_content">Translate it!</string>
    <string name="add_word">Add Word</string>
    <string name="action_tryout">Translate</string>
    <string name="tryout_question">Translate in %1$s: "%2$s"</string>
    <string name="tryout_answer">Translate Here</string>
    <string name="skiping">Pass</string>
    <string name="hinting">Help Me</string>
    <string name="verifying">Verify</string>
    <string name="translation_counter">You have %1$s translations.</string>
    <string name="translation_item">(%1$s) %2$s: (%3$s) %4$s</string>
    <string name="action_translation_list">Translations</string>
    <string name="filter">Type here to filter</string>
    <string name="save_translation">Save</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="no_similar_translation">No similar translation</string>
	<string name="similar_translation_present">Already existing translation:</string>
    <string name="tryout_success">Correct!</string>
    <string name="tryout_similar">Correct but give me another meaning than: %1$s</string>
    <string name="tryout_fail">Not correct, the expected answer was: %1$s</string>
    <string name="tryout_status">You have %1$s pending exercise(s).</string>
    <string name="create_tryout_caption">No exercise, don\'t be worried you can generate a new set of exercise from your translation list.</string>
    <string name="language_from_text">1. Translate from:</string>
	<string name="translate_text">2. Translate:</string>
	<string name="save">Save</string>
	<string name="add">Add</string>
	<string name="verify">Verify</string>
	<string name="create_tryout">Create Tryout</string>
	<string name="create_tryout_status">You are about to create %1$s exercises.</string>
	<string name="create">Create</string>
	<string name="delete">Delete</string>
	<string name="today">Today</string>
	<string name="success_stats">Success: %1$s</string>
	<string name="failure_stats">Failure %1$s</string>
	<string name="last_practice">Last day practiced: %1$s</string>
	<string name="general_stats">You have %1$s translation(s) and %2$s pending exercie(s).</string>
	
	<string name="english">English</string>
	<string name="swahili">Swahili</string>
	
    <string-array name="languages_array">
        <item>@string/english</item>
        <item>@string/swahili</item>
    </string-array>

   <string-array name="translate_from_array">
       <item>Both English and Swahili</item>
       <item>Only English</item>
       <item>Only Swahili</item>
    </string-array>
    
   <string-array name="translate_array">
       <item>All translations</item>
   </string-array>
    
    <color name="selectedText">#000088</color>

    <string name="title_activity_tryout">Exercise</string>
    <string name="title_activity_translation_list">Translations</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_edit_translation">Edit Translation</string>

</resources>
