<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
     <TextView
        android:id="@+id/tryout_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/tryout_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tryout_answer"
        android:ems="10" >
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/verifying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verifying" />
    
    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:visibility="invisible" />
    
    <TextView
        android:id="@+id/tryout_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/correct_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
</LinearLayout>
