<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddWordActivity" >

    <EditText 
        android:id="@+id/source_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/source_content"/>
    
    <Spinner
        android:id="@+id/source_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <EditText android:id="@+id/destination_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/destination_content"/>
    
    <Spinner 
        android:id="@+id/destination_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <Button android:id="@+id/add_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_word"/>

</LinearLayout>
