<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.vocab.EditTranslationActivity$PlaceholderFragment" >

    <LinearLayout
        android:id="@+id/source_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >       
     <Spinner
         android:id="@+id/source_language"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
          />
    
     <EditText 
        android:id="@+id/source_content"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="3"      
        android:hint="@string/source_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />
    
    </LinearLayout>

    <LinearLayout
        android:id="@+id/destination_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="6dp"
        >

         <Spinner
            android:id="@+id/destination_language"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
         	android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        
        <EditText
            android:id="@+id/destination_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/destination_content"
            android:textAppearance="?android:attr/textAppearanceLarge" >

        </EditText>

    </LinearLayout>
    
    <TextView 
        android:id="@+id/similar_status"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:paddingLeft="3dp"
        android:paddingTop="6dp"
        android:text="@string/no_similar_translation"
        />
    
    <ListView
        android:id="@+id/similar_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        />
    
</LinearLayout>
